# crewai-gmail-new-thread-trigger

./: README.md  email_summary.md  pyproject.toml
src/gmail_new_thread_trigger/: crew.py  main.py
src/gmail_new_thread_trigger/config/: agents.yaml  tasks.yaml
src/gmail_new_thread_trigger/tools/: __init__.py  custom_tool.py
